fix: body font-size, letter-spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -12,10 +12,10 @@ body {
 
 html {
   font-family: $san-serif, $source;
-  font-size: 17px;
+  font-size: 1rem;
 
   @media (min-width: $break-small) {
-    font-size: 17px;
+    font-size: 1rem;
   }
 }
 
