--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -54,7 +54,7 @@
         word-break: break-all;
         font-family: $san-serif;
         font-weight: 400;
-        letter-spacing: -0.009em;
+        // letter-spacing: -0.009em;
         color: rgb(59, 69, 78);
         margin: 0 0 10px 0;
 
